EXTRA_DIST = \
	inheritance.h \
	main.h \
	Makefile.am \
	disco_abstract.i \
	disco_endpoint_context.i \
	disco_keys.i \
	disco_options.i \
	disco_provider_id.i \
	disco_query.i \
	disco_query_response.i \
	disco_requested_service.i \
	disco_security_context.i \
	disco_service_context.i \
	disco_service_type.i \
	disco_svc_md_association_add.i \
	disco_svc_md_association_add_response.i \
	disco_svc_md_association_delete.i \
	disco_svc_md_association_delete_response.i \
	disco_svc_md_association_query.i \
	disco_svc_md_association_query_response.i \
	disco_svc_md_delete.i \
	disco_svc_md_delete_response.i \
	disco_svc_md_query.i \
	disco_svc_md_query_response.i \
	disco_svc_md_register.i \
	disco_svc_md_register_response.i \
	disco_svc_md_replace.i \
	disco_svc_md_replace_response.i \
	disco_svc_metadata.i \
	dst_data_response_base.i \
	dst_delete_item_base.i \
	dst_delete_response.i \
	dst_request.i \
	dst_result_query_base.i \
	dst_test_item_base.i \
	dstref_app_data.i \
	dstref_create.i \
	dstref_create_item.i \
	dstref_create_response.i \
	dstref_data.i \
	dstref_data_response.i \
	dstref_delete.i \
	dstref_delete_item.i \
	dstref_delete_response.i \
	dstref_item_data.i \
	dstref_modify.i \
	dstref_modify_item.i \
	dstref_modify_response.i \
	dstref_query.i \
	dstref_query_item.i \
	dstref_query_response.i \
	dstref_result_query.i \
	dstref_test_item.i \
	ims_identity_mapping_request.i \
	ims_identity_mapping_response.i \
	ims_mapping_input.i \
	ims_mapping_output.i \
	is_help.i \
	is_inquiry.i \
	is_inquiry_element.i \
	is_interaction_request.i \
	is_interaction_response.i \
	is_interaction_statement.i \
	is_item.i \
	is_parameter.i \
	is_select.i \
	is_text.i \
	ps_add_collection_request.i \
	ps_add_collection_response.i \
	ps_add_entity_request.i \
	ps_add_entity_response.i \
	ps_add_known_entity_request.i \
	ps_add_known_entity_response.i \
	ps_add_to_collection_request.i \
	ps_get_object_info_request.i \
	ps_get_object_info_response.i \
	ps_item_data.i \
	ps_list_members_request.i \
	ps_list_members_response.i \
	ps_notification.i \
	ps_notify.i \
	ps_object.i \
	ps_query_objects_request.i \
	ps_query_objects_response.i \
	ps_remove_collection_request.i \
	ps_remove_entity_request.i \
	ps_remove_from_collection_request.i \
	ps_request_abstract.i \
	ps_resolve_identifier_request.i \
	ps_resolve_identifier_response.i \
	ps_resolve_input.i \
	ps_response_abstract.i \
	ps_set_object_info_request.i \
	ps_test_membership_request.i \
	ps_test_membership_response.i \
	sb2_consent.i \
	sb2_credentials_context.i \
	sb2_endpoint_update.i \
	sb2_redirect_request.i \
	sb2_sender.i \
	sb2_target_identity.i \
	sb2_timeout.i \
	sb2_usage_directive.i \
	sb2_user_interaction_header.i \
	sbf_framework.i \
	sec_token.i \
	sec_token_policy.i \
	sec_transited_provider_path.i \
	subs_notification.i \
	subs_notify_response.i \
	subs_ref_item.i \
	subs_subscription.i \
	subsref_app_data.i \
	subsref_create.i \
	subsref_create_item.i \
	subsref_create_response.i \
	subsref_data.i \
	subsref_data_response.i \
	subsref_delete.i \
	subsref_delete_item.i \
	subsref_delete_response.i \
	subsref_item_data.i \
	subsref_modify.i \
	subsref_modify_item.i \
	subsref_modify_response.i \
	subsref_notification.i \
	subsref_notify.i \
	subsref_notify_response.i \
	subsref_query.i \
	subsref_query_item.i \
	subsref_query_response.i \
	subsref_result_query.i \
	subsref_subscription.i \
	subsref_test_item.i \
	util_empty.i \
	util_extension.i \
	util_response.i \
	util_status.i
