
EXTRA_DIST = \
	inheritance.h \
	main.h \
	Makefile.am \
	saml2_action.i \
	saml2_advice.i \
	saml2_assertion.i \
	saml2_attribute.i \
	saml2_attribute_statement.i \
	saml2_attribute_value.i \
	saml2_audience_restriction.i \
	saml2_authn_context.i \
	saml2_authn_statement.i \
	saml2_authz_decision_statement.i \
	saml2_base_idabstract.i \
	saml2_condition_abstract.i \
	saml2_conditions.i \
	saml2_encrypted_element.i \
	saml2_evidence.i \
	saml2_key_info_confirmation_data.i \
	saml2_name_id.i \
	saml2_one_time_use.i \
	saml2_proxy_restriction.i \
	saml2_statement_abstract.i \
	saml2_subject_confirmation_data.i \
	saml2_subject_confirmation.i \
	saml2_subject.i \
	saml2_subject_locality.i \
	samlp2_artifact_resolve.i \
	samlp2_artifact_response.i \
	samlp2_assertion_id_request.i \
	samlp2_attribute_query.i \
	samlp2_authn_query.i \
	samlp2_authn_request.i \
	samlp2_authz_decision_query.i \
	samlp2_extensions.i \
	samlp2_idp_entry.i \
	samlp2_idp_list.i \
	samlp2_logout_request.i \
	samlp2_manage_name_id_request.i \
	samlp2_name_id_mapping_request.i \
	samlp2_name_id_mapping_response.i \
	samlp2_name_id_policy.i \
	samlp2_request_abstract.i \
	samlp2_requested_authn_context.i \
	samlp2_response.i \
	samlp2_scoping.i \
	samlp2_status_code.i \
	samlp2_status_detail.i \
	samlp2_status.i \
	samlp2_status_response.i \
	samlp2_subject_query_abstract.i \
	samlp2_terminate.i

